apps/arr-stack/arr-smb-server/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: arr-smb-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr-smb-server
  template:
    metadata:
      name: arr-smb-server
      labels:
        app: arr-smb-server
    spec:
      containers:
        - name: arr-smb-server
          image: dperson/samba
          volumeMounts:
            - mountPath: /smbshare
              name: arr-smb-volume
          ports:
            - name: arr-smb-server
              containerPort: 445
      volumes:
        - name: arr-smb-volume
          persistentVolumeClaim:
            claimName: arr-smb-volume-pvc
