apps/arr-stack/arr-smb-server/base/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: arr-smb-server-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: arr-smb-server.labs.andrewpjackson.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: arr-smb-server
spec:
  entryPoints:
    - web-int-tls
  routes:
    - match: Host(`arr-smb-server.labs.andrewpjackson.com`)
      kind: Rule
      services:
        - kind: Service
          name: arr-smb-server
          port: 5055
  tls:
    secretName: labs-andrewpjackson-com-tls
